<resources>
    <string name="app_name" translatable="false">Skat Scores</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_new_game">New List</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_history">History</string>
    <string name="settingsScoringSimple">Simple</string>
    <string name="settingsScoringTournament">Tournament</string>
    <string name="settingsScoringTitle">Scoring</string>
    <string name="settingsRoundCountTitle">Number of rounds</string>
    <string name="title_settings_language">Languages</string>
    <string name="label_game_settings">Game settings</string>
    <string name="title_general_settings">General</string>
    <string name="title_number_of_players">Number of players</string>
    <string name="title_list_name">List name</string>
    <string name="description_start">Start the new list</string>
    <string name="title_about">About this app</string>
    <string name="title_players">Players</string>
    <string name="label_new_game_button">New game</string>
    <string name="title_category_languages">Languages</string>
    <string name="title_category_general">General</string>
    <string name="title_badge_unfinished">Show unfinished lists as badge</string>
    <string name="title_settings_match_preset">Match Presets</string>
    <string name="title_settings_scoring">Scoring</string>
    <string name="title_settings_number_rounds">Number of rounds</string>
    <string name="title_settings_number_players">Number of players</string>
    <string name="message_scoring_dialog">Select scoring mode</string>
    <string name="message_dialog_rounds">Select number of rounds</string>
    <string name="message_dialog_number_players">Select number of players</string>
    <string name="message_language_dialog">Select language</string>
    <string name="title_game_setup">New list</string>
    <string name="settingsStartButton">Start</string>
    <string name="hint_player3">Player 3</string>
    <string name="hint_player2">Player 2</string>
    <string name="hint_player1">Player 1</string>
    <string name="title_done">Done</string>
    <string name="description_score_done">Score edit is finished.</string>
    <string name="default_list_title">Skatround</string>
    <string name="welcome_text_open_games">Hello, you have not finished all of your games.</string>
    <string name="welcome_text">Hello, it\'s time to start a new Skat round!</string>
    <string name="dealer_message">%s is dealer</string>
    <string name="title_new_game_button">New list</string>
    <string name="text_add_player_button">Add player</string>
    <string name="text_about">Version 1.0 (2023)\nCopyright © Geneva 2023\nThis app was developed by Damian Hoedtke.</string>
    <string name="text_tutorial">The tutorial is not implemented yet.</string>
    <string name="description_new_score">Create a new score</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="german_preference_value" translatable="false">de</string>
    <string name="english_preference_value" translatable="false">en</string>
    <string name="mode_night_title">Dark</string>
    <string name="mode_day_title">Light</string>
    <string name="mode_system_title">System default</string>
    <string name="day_theme_preference_value" translatable="false">day</string>
    <string name="night_theme_preference_value" translatable="false">night</string>
    <string name="system_theme_preference_value" translatable="false">system</string>
    <string name="dummy_player_name">Player</string>
    <string name="template_game_count_long">Played %d games</string>
    <string name="template_created_at">Created at %s</string>
    <string name="template_updated_at">Last updated at %s</string>
    <string name="label_overbid">Overbid</string>
    <string name="label_lost">Lost</string>
    <string name="label_won">Won</string>
    <string name="label_passe" translatable="false">Passe</string>
    <string name="description_increase_spitzen">Increase number of Spitzen</string>
    <string name="title_win_levels">Win levels</string>
    <string name="title_announcements">Announcements</string>
    <string name="title_suit">Suit</string>
    <string name="title_spitzen">With / Without</string>
    <string name="label_schwarz" translatable="false">Schwarz</string>
    <string name="label_schneider" translatable="false">Schneider</string>
    <string name="description_spitzen_slider">Number of Spitzen</string>
    <string name="label_ouvert" translatable="false">Ouvert</string>
    <string name="label_hand" translatable="false">Hand</string>
    <string name="title_solo_player">Who won?</string>
    <string name="title_result">Result</string>
    <string name="description_lower_spitzen">Lower the number of spitzen</string>
    <string name="label_grand" translatable="false">Grand</string>
    <string name="label_null" translatable="false">Null</string>
    <string name="label_schneider_announced">Schneider announced</string>
    <string name="label_schwarz_announced">Schwarz announced</string>
    <string name="description_spades">Spades</string>
    <string name="description_clubs">Clubs</string>
    <string name="description_hearts">Hearts</string>
    <string name="description_diamonds">Diamonds</string>
    <string name="description_scroll_view_main_content" translatable="false">Scroll view that contains main content</string>
    <string name="text_info_no_players">Create player profiles for your games.</string>
    <string name="description_create_new_profile">Create a new profile</string>
    <string name="title_start_dealer">First dealer</string>
    <string name="description_number_of_rounds">Number of rounds</string>
    <string name="description_new_game">Create a new game</string>
    <string name="menu_home">Home</string>
    <string name="title_this_year_progress">This year</string>
    <string name="title_overall_progress">Overall</string>
    <string name="title_this_month_progress">This month</string>
    <string name="menu_edit_score">Edit</string>
    <string name="menu_delete_score">Delete</string>
    <string name="menu_show_details">Details</string>
    <string name="passe_text">This game was passed.</string>
    <string name="overbid_text">It was overbidden.</string>
    <string name="won_text">Won</string>
    <string name="lost_text">Lost</string>
    <string name="unknown" translatable="false">unknown</string>
    <string name="title_library">Lists</string>
    <string name="title_continue">Continue</string>
    <string name="label_this_month">This month</string>
    <string name="label_older">Last month and before</string>
    <string name="text_older_no_games">You didn\'t play any games at this time.</string>
    <string name="text_this_month_no_games">You didn\'t play any games this month.</string>
    <string name="title_filter">Filter</string>
    <string name="description_older_games" translatable="false">List of games that are older than this month.</string>
    <string name="title_players_short">Players</string>
    <string name="language_preference_title">Language</string>
    <string name="theme_preference_title">Theme</string>
    <string name="system_preference_category_title">System</string>
    <string name="behavior_preference_category_title">Behavior</string>
    <string name="badge_preference_title">Show unfinished games as badge</string>
    <string name="other_preference_category_title">Other</string>
    <string name="about_preference_title">About this app</string>
    <string name="hint_player_name">Name</string>
    <string name="dialog_title_create_player">Create player</string>
    <string name="dialog_title_button_cancel">Cancel</string>
    <string name="dialog_title_button_create">Create</string>
    <string name="error_name_required">Name is required!</string>
    <string name="error_name_exists_already">This name already exists.</string>
    <string name="error_name_has_wrong_size">Use 1 to 20 chars.</string>
    <string name="dialog_title_button_save">Save</string>
    <string name="error_valid_title_required">Enter a title!</string>
    <string name="dialog_title_button_got_it">Got it</string>
    <string name="dialog_title_score_details">Score details</string>
    <string name="dialog_title_edit_player_name">Change name</string>
    <string name="label_finished">Finished</string>
    <string name="title_button_delete">Delete</string>
    <string name="title_button_player_statistics">View stats</string>
    <string name="theme_preference_key" translatable="false">ui_mode</string>
    <string name="badge_preference_key" translatable="false">unfinished_as_badge</string>
    <string name="about_preference_key" translatable="false">about</string>
    <string name="language_preference_key" translatable="false">language</string>
    <string name="graphTitle">Graph</string>
    <string name="scoreTitle">Edit score</string>
    <string name="playerStatisticsTitle">Statistics</string>
    <string name="pointsLostLabel" translatable="false">x40</string>
    <string name="pointsSoloLabel" translatable="false">x50</string>
    <string name="pointsTotalLabel">Points</string>
    <string name="settingsPlayerCountTitle">Wie viele spielen?</string>
    <string name="playerStatsTitleListCount">Anzahl Listen</string>
    <string name="playerStatsTitleOverall">Allgemein</string>
    <string name="playerStatsTitleGameCount">Anzahl Spiele</string>
    <string name="playerStatsTitleQuality">Qualität</string>
    <string name="playerStatsTitleQualitySolo">Alleinspieler</string>
    <string name="playerStatsTitleQualityAgainst">Gegenspiele gewonnen</string>
    <string name="playerStatsTitleQualityWins">Gewonnen</string>
    <string name="settingsThreePlayersText" translatable="false">3</string>
    <string name="settingsListNameTitle">"Wie soll die Liste \nheissen?"</string>
    <string name="settingsRoundCountContentDescription">Choose number of rounds.</string>
    <string name="biddingTitle">Bidding value</string>
    <string name="title_next">Next</string>
    <string name="description_score_next" translatable="false">Continue to score details</string>
    <string name="linkWithPlayerProfile">Link with player profile</string>
    <string name="title_game_settings">Settings</string>
    <string name="title_bidding">Bidding value</string>
    <string name="greeting_morning">Good morning</string>
    <string name="greeting_afternoon">Good afternoon</string>
    <string name="greeting_evening">Good evening</string>
    <string name="greeting_night">Good night</string>
    <string name="label_dealer">Deals: %s</string>
    <string name="label_round_progress">Round %1$d / %2$d</string>
    <string name="title_keep_playing">Keep playing</string>
    <string name="title_quick_start">Quick start</string>
    <string name="title_same_round_again">Same round again</string>
    <string name="title_recently_played">Recently played</string>
    <string name="title_show_all">All</string>
    <string name="title_no_running_list">No list running — start a new one.</string>
    <string name="description_quick_start">Start a new list with the same players</string>
    <string name="description_new_list">New list</string>
    <string name="message_list_deleted">List deleted</string>
    <string name="action_undo">Undo</string>
    <string name="format_list_meta" translatable="false">%1$s · %2$s</string>
    <string name="format_spitzen" translatable="false">%d×</string>
    <string name="title_who_plays">Who plays?</string>
    <string name="title_game_kind">Game</string>
    <string name="title_round">Round %d</string>
    <string name="label_announced">Announced</string>
    <string name="description_close">Close</string>
    <string name="menu_delete_list">Delete list</string>
</resources>