<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_help"
        android:title="@string/title_help"
        android:icon="@drawable/ic_help_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/title_about"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/statistics"
        android:icon="@drawable/ic_bar_chart_24dp"
        app:showAsAction="always"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/history"
        android:title="@string/title_history"
        app:showAsAction="always"
        android:icon="@drawable/ic_history_24dp"
        />

    <item
        android:id="@+id/players"
        android:title="@string/title_users"
        app:showAsAction="always"
        android:icon="@drawable/ic_people_24dp" />

</menu>