<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp">

        <com.google.android.material.divider.MaterialDivider
                android:id="@+id/topDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/topDivider">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/titleTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/theme_preference_title"
                        android:textAppearance="?textAppearanceTitleLarge"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                        android:id="@+id/themeGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@id/titleTheme">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/buttonLightTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mode_day_title"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/buttonDarkTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mode_night_title"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/buttonSystemTheme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mode_system_title"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                </RadioGroup>

                <TextView
                        android:id="@+id/titleLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/language_preference_title"
                        android:textAppearance="?textAppearanceTitleLarge"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/themeGroup" />

                <RadioGroup
                        android:id="@+id/languageGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toBottomOf="@id/titleLanguage">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/buttonGermanLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/german"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/buttonEnglishLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"
                            android:textAppearance="?attr/textAppearanceTitleMedium" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.divider.MaterialDivider
                android:id="@+id/bottomDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/scrollView" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAbout"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/title_about"
                android:textAppearance="?textAppearanceBodyLarge"
                android:textColor="?colorOnSurfaceVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bottomDivider" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>