<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/winLevelsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/title_win_levels"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/winLevelChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                app:layout_constraintTop_toBottomOf="@id/winLevelsTitle">

            <com.google.android.material.chip.Chip
                    android:id="@+id/handChip"
                    style="?attr/chipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_hand"
                    tools:checked="true"/>

            <com.google.android.material.chip.Chip
                    android:id="@+id/ouvertChip"
                    style="@style/Widget.App.Chip.Suggestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_ouvert" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>